Change back authorize url

--- a/donations/static/sky-addin/manifest.json
+++ b/donations/static/sky-addin/manifest.json
@@ -21,7 +21,7 @@
   ],
   "oauth2": {
     "clientId": "3b9c4ffd-ed8c-4682-9e23-43032fc886a5",
-    "authorizeUrl": "https://oauth2.sky.blackbaud.com/connect/authorize",
+    "authorizeUrl": "https://app.blackbaud.com/oauth/authorize",
     "tokenUrl": "https://oauth2.sky.blackbaud.com/connect/token",
     "scopes": [
       "eventapi.events.read",
